Fixup spotless
Signed-off-by: Bukhtawar Khan <bukhtawa@amazon.com>